# AssetStudio

./: .gitignore  AssetStudio.sln  CMakeLists.txt
AssetStudio/: AssetStudio.csproj
AssetStudio.PInvoke/: AssetStudio.PInvoke.csproj  DllLoader.cs
AssetStudio/Math/: Half.cs
AssetStudioCLI/: AssetStudioCLI.csproj  CMakeLists.txt  Exporter.cs  Program.cs  Properties.cs  Studio.cs  packages.config
AssetStudioCLI/Components/: AssetItem.cs  GOHierarchy.cs  GameObjectTreeNode.cs  OpenFolderDialog.cs  TreeViewExtensions.cs  TypeTreeItem.cs
AssetStudioFBXWrapper/: AssetStudioFBXWrapper.csproj
AssetStudioUtility/: AssetStudioUtility.csproj
Texture2DDecoderNative/: CMakeLists.txt
Texture2DDecoderNative/crunch/: crn_decomp.h
Texture2DDecoderNative/unitycrunch/: crn_decomp.h
Texture2DDecoderWrapper/: Texture2DDecoderWrapper.csproj
